Fix alignment

--- a/style.css
+++ b/style.css
@@ -27,8 +27,6 @@ html {
 	background-color: #1a1a1a;
 	color: white;
 	font-size: 16px;
-	position: absolute;
-	margin: 0 auto;
 }
 
 footer {
